--- a/Editor/com.utkaka.PsdSynchronization.Editor.asmdef
+++ b/Editor/com.utkaka.PsdSynchronization.Editor.asmdef
@@ -2,8 +2,7 @@
     "name": "com.utkaka.PsdSynchronization.Editor",
     "rootNamespace": "com.utkaka.PsdSynchronization.Editor",
     "references": [
-        "GUID:cfcdc9ed01805442a888aab72575684c",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "com.utkaka.PsdSynchronization.Editor.Psd"
     ],
     "includePlatforms": [
         "Editor"
