--- a/Project~/Packages/manifest.json
+++ b/Project~/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.unity.ide.rider": "3.0.25",
+    "com.unity.collections": "1.2.4",
+    "com.unity.ide.rider": "3.0.26",
     "com.unity.ugui": "1.0.0",
     "com.utkaka.psd-synchronization": "file:../..",
     "com.unity.modules.androidjni": "1.0.0",
