--- a/Editor/Psd/com.utkaka.PsdSynchronization.Editor.Psd.asmdef
+++ b/Editor/Psd/com.utkaka.PsdSynchronization.Editor.Psd.asmdef
@@ -5,7 +5,9 @@
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
